--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="poleland">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,11 +41,20 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container" ng-controller="ListPolls">
       <h1>Welcome to Poleland!</h1>
+      <p>{{message}}</p>
+      <ul>
+        <li ng-repeat="poll in polls">{{poll.title}}</li>
+      </ul>
     </div>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js">
     </script>
+    <script
+       src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js">
+    </script>
+    <script src="/static/js/app.js"></script>
+    <script src="/static/js/controllers.js"></script>
   </body>
 </html>
