Move the HTTP interaction into a service

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -52,6 +52,7 @@
        src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js">
     </script>
     <script src="/static/js/app.js"></script>
+    <script src="/static/js/services.js"></script>
     <script src="/static/js/controllers.js"></script>
   </body>
 </html>
