Add delete button to polls list

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -51,6 +51,9 @@
     <script
        src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js">
     </script>
+    <script
+       src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js">
+    </script>
     <script src="/static/js/app.js"></script>
     <script src="/static/js/services.js"></script>
     <script src="/static/js/controllers.js"></script>
