--- a/src/static/index.html
+++ b/src/static/index.html
@@ -52,10 +52,14 @@
        src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js">
     </script>
     <script
+       src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"
+    </script>
+    <script
        src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js">
     </script>
     <script src="/static/js/app.js"></script>
     <script src="/static/js/services.js"></script>
     <script src="/static/js/controllers.js"></script>
+    <script src="/static/js/directives.js"></script>
   </body>
 </html>
