Add ability to add new answers

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -57,6 +57,8 @@
     <script
        src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js">
     </script>
+    <script src="/static/bower_components/angular-uuid4/angular-uuid4.min.js">
+    </script>
     <script src="/static/js/app.js"></script>
     <script src="/static/js/services.js"></script>
     <script src="/static/js/controllers.js"></script>
