Use jQuery UI sortable for drag-and-drop

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet"
           href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"
           />
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/css/jquery-ui.min.css"
+          />
     <link rel="stylesheet" href="/static/index.css" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
          queries -->
@@ -43,6 +46,9 @@
     </div>
     <div ng-view></div>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script
+       src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js">
+    </script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js">
     </script>
     <script
@@ -58,6 +64,8 @@
        src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js">
     </script>
     <script src="/static/bower_components/angular-uuid4/angular-uuid4.min.js">
+    </script>
+    <script src="/static/bower_components/angular-ui-sortable/sortable.js">
     </script>
     <script src="/static/js/app.js"></script>
     <script src="/static/js/services.js"></script>
