--- a/ui/static/index.html
+++ b/ui/static/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet"
           href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/css/jquery-ui.min.css"
           />
-    <link rel="stylesheet" href="/static/index.css" />
+    <link rel="stylesheet" href="/index.css" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
          queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -66,13 +66,13 @@
     <script
        src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js">
     </script>
-    <script src="/static/bower_components/angular-uuid4/angular-uuid4.min.js">
+    <script src="/bower_components/angular-uuid4/angular-uuid4.min.js">
     </script>
-    <script src="/static/bower_components/angular-ui-sortable/sortable.js">
+    <script src="/bower_components/angular-ui-sortable/sortable.js">
     </script>
-    <script src="/static/js/app.js"></script>
-    <script src="/static/js/services.js"></script>
-    <script src="/static/js/controllers.js"></script>
-    <script src="/static/js/directives.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/services.js"></script>
+    <script src="/js/controllers.js"></script>
+    <script src="/js/directives.js"></script>
   </body>
 </html>
