Update versions referenced on front-end

--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Poleland</title>
     <link rel="stylesheet"
-          href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
+          href="//netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
           />
     <link rel="stylesheet"
-          href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"
+          href="//netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css"
           />
     <link rel="stylesheet"
-          href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/css/jquery-ui.min.css"
+          href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.css"
           />
     <link rel="stylesheet" href="/index.css" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
          queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js">
+      <script src="//oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js">
       </script>
       <script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js">
       </script>
@@ -45,23 +45,23 @@
       </div>
     </div>
     <div ng-view></div>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script
-       src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js">
+       src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js">
     </script>
     <script
-       src="//cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.2/jquery.ui.touch-punch.min.js">
+       src="//cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js">
     </script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js">
-    </script>
-    <script
-       src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js">
     </script>
     <script
-       src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js">
+       src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js">
     </script>
     <script
-       src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js">
+       src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.min.js">
+    </script>
+    <script
+       src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.min.js">
     </script>
     <script
        src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js">
